<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_icon_description"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_checking_permissions"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnToggleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_service_status"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnGrantOverlayPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_grant_overlay_permission"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/important_notes"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.2"/>
</LinearLayout>
